SERVER-23444 Fixed pessimizing move.