src/mongo/db/matcher/expression_tree.h
@@ -68,7 +68,7 @@ public:
     virtual std::unique_ptr<MatchExpression> releaseChild(size_t i) {
         auto child = std::unique_ptr<MatchExpression>(_expressions[i]);
         _expressions[i] = nullptr;
-        return std::move(child);
+        return child;
     }
 
     virtual std::vector<MatchExpression*>* getChildVector() {
